--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "homepage": "."
+    "homepage": "https://jmiguelg98.github.io/Calculadora-Preoperatoria/"
   },
   "eslintConfig": {
     "extends": [
